--- a/dissertation.tex
+++ b/dissertation.tex
@@ -60,6 +60,8 @@
 \usepackage{textcomp}
 \usepackage{sidecap} %for figure caption on the side
 \usepackage{enumitem} % for possibility to adjust item left margin indentation
+\usepackage{caption}
+\usepackage{subcaption}
 
 \usepackage{titlesec} %fix header fonts
 \titleformat{\title}[display]
