--- a/Introduction.tex
+++ b/Introduction.tex
@@ -5,29 +5,13 @@
 \label{sec:motivation}
 \setlength{\leftskip}{0.5cm}
 \indent \indent
-In the modern world, computers have improved almost every aspect of our lives. Recently, home security has become the latest target of the technology revolution. Companies like Ring \cite{RING} and Eufy \cite{EUFY} offer IoT devices like doorbells and cameras to allow their customers to monitor their property 24/7. On top of traditional surveillance, these companies also provide software solutions to monitor the footage recorded by their devices and interpret it. For example, a doorbell may recognise who is at the front door and allow them to enter or alert the user to the presence of a stranger if it doesn't. However, the computational intensity of these inferences means footage must be transferred from the devices to more powerful servers. 
+In the modern world, computers have improved almost every aspect of our lives. Recently, home security has become the latest target of the technology revolution. Companies like Ring \cite{RING} and Eufy \cite{EUFY} offer IoT devices like doorbells and cameras to allow their customers to monitor their property 24/7. On top of traditional surveillance, these companies also provide software solutions to monitor the footage recorded by their devices and interpret it. For example, a doorbell may recognise who is at the front door and allow them to enter, or alert the user to the presence of a stranger if it doesn't. However, the computational intensity of these inferences means footage must be transferred from the devices to more powerful servers.
 \smallskip \\ \indent
-In order to preserve privacy, video is encrypted before it is sent to the server. But when the inference algorithms are executing, the footage must be decrypted. This is an immediate privacy concern. Having the ability to decrypt the footage exposes the opportunity for employees of these companies to access constant surveillance of peoples' homes. The possibilities for exploitation are endless. Malicious actors could use this information to monitor people's location, appraise their belongings, or use the contents of footage for extortion, to name a few. Homomorphic Encryption may provide a solution to this.
+In order to preserve privacy, video is encrypted before it is sent to the server. However, the footage must be decrypted when the inference algorithms are executing. This is an immediate privacy concern. Having the ability to decrypt the footage exposes the opportunity for employees of these companies to access constant surveillance of peoples' homes. The possibilities for exploitation are endless. Malicious actors could use this information to monitor people's location, appraise their belongings, or use the contents of footage for extortion, to name a few. Homomorphic Encryption may provide a solution to this.
 \smallskip \\ \indent
-Homomorphic Encryption (henceforth HE) is a cryptographic method of encrypting data such that mathematical operations can be performed on encrypted data, or \textit{ciphertext}, itself, rather than on the raw data, or \textit{plaintext}. For example, consider the operation $3 \times 5$. In a traditional encryption scheme, the plain values $3$ and $5$ would be multiplied before encrypting the result. Using a homomorphic scheme, the $3$ and $5$ can be encrypted, and the ciphertexts multiplied so that when the ciphertext is decrypted, the plaintext is $15$. But can this technique be scaled to more complex algorithms, like those required for surveillance?
+Homomorphic Encryption (henceforth HE) is a cryptographic method of encrypting data such that mathematical operations can be performed on encrypted data, or \textit{ciphertext}, itself, rather than on the raw data, or \textit{plaintext}. For example, consider the operation $3 \times 5$. In a traditional encryption scheme, the plain values $3$ and $5$ would be multiplied before encrypting the result. Using a homomorphic scheme, the $3$ and $5$ can be encrypted, and the ciphertexts multiplied so that when the ciphertext is decrypted, the plaintext is $15$. An open question is, can this technique be scaled to more complex algorithms, like those required for surveillance?
 \smallskip \\ \indent
-More specifically, is it possible to extract the moving objects from a frame of HE video data? Moving object detection, also known as \textit{foreground extraction} or \textit{background subtraction}, is fundamental to modern surveillance systems. Detecting when, for example, somebody enters a property, allows the security systems to alert their owners, possibly pre-empting a break-in. To perform this analysis, the contents of a video must be modelled using a, usually probabilistic, function that allows significant changes in a pixels' value to be discerned. The difficulty of this arises when accounting for environmental changes which will cause numerical variation, such as light levels when moving from day to night or different weather conditions causing objects to distort.
-
-\setlength{\leftskip}{0cm}
-
-\section{Aims and Contributions}
-\label{sec:aimsAndContributions}
-\setlength{\leftskip}{0.5cm}
-\indent \indent
-This dissertation documents the design and implementation of a potential solution to the questions posed in §\ref{sec:motivation}, while attempting to follow the constraints restricting the highlighted systems in the real world. In particular, I contribute the following:
-\begin{itemize}
-    \item I create a client-server application simulating the device-server stack utilised by existing products, allowing secure transmission of video data from client to server and back again after performing inference.
-    \item I use Microsoft's Secure Encrypted Arithmetic Library (SEAL) \cite{SEAL} to integrate the CKKS HE scheme \cite{CKKS} for encrypting videos while they are away from the client.
-    \item I implement a series of algorithms for enabling private and plain inference of video data to extract moving objects by producing a mask that can be applied to videos in the clear by the client.
-    \item I investigate Gaussian Mixture Models (GMMs) for background subtraction, beginning with the work by Stauffer and Grimson \cite{Stauffer} then moving into more general Expectation-Maximisation GMM algorithms [SOURCE?].
-    \item As an extension, I build a toy CKKS implementation called MeKKS based on the Homomorphic Encryption for Arithmetic of Approximate Numbers paper by Cheon et al.\ \cite{CKKS,BootstrappingHEAAN} to improve understanding of HE.
-    \item I demonstrate the efficacy of my solution using timing, accuracy, and (hopefully) energy usage data to compare the results of plain video, CKKS encrypted data, and MeKKS encrypted data.
-\end{itemize}
+More specifically, is it possible to extract the moving objects from a frame of HE video data? Moving object detection, also known as \textit{foreground extraction} or \textit{background subtraction}, is fundamental to modern surveillance systems. Detecting when, for example, somebody enters a property, allows the security systems to alert their owners, possibly pre-empting a break-in. To perform this analysis, the contents of a video must be modelled using a, usually probabilistic, function that allows significant changes in a pixels' value to be discerned. The difficulty of this arises when accounting for environmental changes that cause numerical variation, such as light levels when moving from day to night or different weather conditions causing objects to distort.
 
 \setlength{\leftskip}{0cm}
 
@@ -36,10 +20,27 @@ This dissertation documents the design and implementation of a potential solutio
 \label{sec:relatedWork}
 \setlength{\leftskip}{0.5cm}
 \indent \indent
-The lack of privacy caused by constant surveillance is not a new concern. There have been many attempts at solving video inference in the encrypted domain, but none are without flaws. For example, in 2013, Chu et al.\ \cite{Chu} proposed an encryption scheme that supports real-time moving object detection, but this was quickly shown to suffer from information leakage, leaving it vulnerable to chosen-plaintext attacks\footnote{A \textit{chosen-plaintext attack} is a scenario in which an adversary has the ability to encrypt plaintexts of their choosing, and analyse the corresponding ciphertext in an attempt to break the encryption. }. Similarly, in 2017, Lin et al.\ \cite{Lin} proposed a different encryption scheme to achieve the same goal by only encrypting some of the bits in each pixel, but this is unprotected against steganographic\footnote{\textit{Steganography} describes the technique of information hiding. Like cryptography, steganography attempts to prevent adversaries from reading messages. But, where in cryptography the existence of a message is known but its contents are not, steganography attempts to hide the existence of the message.} attacks. Therefore, while research has been able to solve the weaknesses in privacy, it is yet to offer a solution that also preserves security, without which encryption is pointless.
+The lack of privacy caused by constant surveillance is not a new concern. There have been many attempts at solving video inference in the encrypted domain, but none are without flaws. For example, in 2013, Chu et al.\ \cite{Chu} proposed an encryption scheme that supports real-time moving object detection, but this was quickly shown to suffer from information leakage, leaving it vulnerable to chosen-plaintext attacks\footnote{ A \textit{chosen-plaintext attack} is a scenario in which an adversary can encrypt plaintexts of their choosing, and analyse the corresponding ciphertext in an attempt to break the encryption. }. Similarly, in 2017, Lin et al.\ \cite{Lin} proposed a different encryption scheme to achieve the same goal by only encrypting some of the bits in each pixel, but this is unprotected against steganographic\footnote{\textit{Steganography} describes the technique of information hiding. Like cryptography, steganography attempts to prevent adversaries from reading messages. Unlike cryptography, where the existence of a message is known but its contents are not, steganography attempts to hide the message's existence.} attacks. Therefore, while research has been able to solve the weaknesses in privacy, it is yet to offer a solution that also preserves security against adversaries directly attacking the encryption, making them useless to real-world applications.
 \smallskip \\ \indent
-Likewise, researchers have been investigating inference using HE for many years. In 2012, Graepel et al.\ \cite{Graepel} introduced machine learning in the HE domain. Dowlin et al.\ \cite{Graepel} built upon this when they developed the CryptoNets model for deep learning with HE in 2016. However, deep learning neural networks are considered overkill for moving-object detection. Instead, GMMs are the most widely used technique for background modelling. There is much less research into this area of unsupervised learning within the HE domain. The best example appears to be when, in 2013, Pathak and Raj \cite{Pathak} proposed a HE implementation of a GMM for audio inference. But there does not seem to be any investigations linking HE and GMMs to video analysis.
+Likewise, researchers have been investigating inference using HE for many years. In 2012, Graepel et al.\ \cite{Graepel} introduced machine learning in the HE domain. Dowlin et al.\ \cite{Graepel} built upon this when they developed the CryptoNets model for deep learning with HE in 2016. However, deep learning neural networks are considered overly complex for moving-object detection. Instead, GMMs are the most widely used technique for background modelling. There is much less research into this area of unsupervised learning within the HE domain. The best example appears to be when, in 2013, Pathak and Raj \cite{Pathak} proposed a HE implementation of a GMM for audio inference. But there does not seem to be any investigations linking HE and GMMs to video analysis.
 \smallskip \\ \indent
-It appears that the most prevailing explanation for this lack of research is HE's inapplicability to real-time applications, due to its high computational complexity. While this may be true now, it is important to acknowledge that advances in computing capability will reduce the relative difficulty of HE operations. Consequently, more insight into its applicability will become increasingly useful, as suggested by the trend in the growing popularity of HE research.
+It appears that the most prevailing explanation for this lack of research is HE's inapplicability to real-time applications, due to its high computational complexity. While this may be true now, it is important to acknowledge that advances in computing capability will reduce the relative difficulty of HE operations. Consequently, more insight into its applicability will become increasingly valuable, as suggested by the trend in the growing popularity of HE research. This dissertation attempts to offer some beginnings to this insight as it attempts to find the constraining limitations of current HE implementations with respect to surveillance.
+
+\setlength{\leftskip}{0cm}
+
+
+\section{Aims and Contributions}
+\label{sec:aimsAndContributions}
+\setlength{\leftskip}{0.5cm}
+\indent \indent
+This dissertation documents the design and implementation of a potential solution to the questions posed in §\ref{sec:motivation}, while attempting to follow the constraints restricting the aforementioned real-world systems. In particular, the contribution of the work is:
+\begin{itemize}
+    \item The creation of a client-server application simulating the device-server stack utilised by existing products, allowing secure transmission of video data from client to server and back again after performing inference.
+    \item The use of Microsoft's Secure Encrypted Arithmetic Library (SEAL) \cite{SEAL} to integrate the CKKS HE scheme \cite{CKKS} for encrypting videos while they are away from the client.
+    \item The implementation of a series of algorithms for enabling private and plain inference of video data to extract moving objects by producing a mask that can be applied to videos in the clear by the client.
+    \item An investigation of Gaussian Mixture Models (GMMs) for HE encrypted background subtraction, beginning with the work by Stauffer and Grimson \cite{Stauffer} then moving into more general Expectation-Maximisation GMM algorithms [SOURCE?].
+    \item As an extension, the fabrication of a CKKS implementation from scratch, called MeKKS, based on the Homomorphic Encryption for Arithmetic of Approximate Numbers paper by Cheon et al.\ \cite{CKKS,BootstrappingHEAAN} to improve understanding of HE.
+    \item A demonstration of the efficacy of the above solutions using timing, accuracy, and \textit{(hopefully)} energy usage data to compare inference of CKKS and MeKKS solutions to plain videos, highlighting the advantages of the MeKKS implementation being targeted to this application over the more generic CKKS.
+\end{itemize}
 
 \setlength{\leftskip}{0cm}
