--- a/Preparation.tex
+++ b/Preparation.tex
@@ -9,7 +9,7 @@ Processes related to \ldots
 
 \subsection{Homomorphic Encryption}
 
-\subsection{Maybe more...}
+\subsection{Moving Object Detection}
 
 \begin{table}[!htbp]\centering
 \def\arraystretch{1.3}
@@ -36,4 +36,21 @@ Processes related to \ldots
 
 \section{Starting Point}
 
+\subsection{Knowledge and Experience}
+
+\subsection{Use of Libraries and Datasets}
+
+\subsection{Pre-Implementation Decisions}
+
+\subsection{Computer Resources}
+
+
+\section{Tools Used}
+
+\subsection{Software}
+
+\subsection{Licensing}
+
+
+\section{Testing}
 
