--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -38,13 +38,6 @@ BibTeX export options can be customized via Options -> BibTeX in Mendeley Deskto
   year            = {2018}
 }
 
-@article{ Stauffer,
-  author          = {Chris Stauffer and W.E.L Grimson},
-  journal         = {IEEE},
-  title           = {Adaptive background mixture models for real-time tracking},
-  year            = {1999}
-}
-
 @article{ Chu,
     author          = {Kuan-Yu Chu and Yin-Hsi Kuo and Winston H. Hsu},
     journal         = {Proceedings of the 21st ACM international conference on Multimedia},
@@ -78,4 +71,211 @@ BibTeX export options can be customized via Options -> BibTeX in Mendeley Deskto
   journal         = {IEEE},
   title           = {Privacy-Preserving Speaker Verification and Identification Using Gaussian Mixture Models},
   year            = {2013}
+}
+
+@article{ Bae,
+  author          = {Ho Bae and Jaehee Jang and Dahuin Jung and Hyemi Jang and Heonseok Ha and Hyungyu Lee and Sungroh Yoon},
+  journal         = {Journal of IEEE Transactions on Arificial Intelligence},
+  title           = {Security and Privacy Issues in Deep Learning},
+  year            = {2018}
+}
+
+@article{ TLS,
+  author          = {Steven Turner},
+  journal         = {IEEE Internet Security},
+  title           = {Transport Layer Security},
+  year            = {2014}
+}
+
+@article{ PartialSchemes,
+  author          = {Payal V. Parmar and Shraddha B. Padhar and Shafika N. Patel and Niyatee I. Bhatt and Rutvij H. Jhaveri},
+  journal         = {International Journal of Computer Applications},
+  title           = {Survey of Various Homomorphic Encryption Algorithms and Schemes},
+  year            = {2014}
+}
+
+@article{ OTP,
+  author          = {Ioannis Tzemos and Apostolos P. Fournaris and Nicolas Sklavos},
+  journal         = {20th Pan-Hellenic Conference on Informatics},
+  title           = {Security and Efficiency Analysis of One Time Password Techniques},
+  year            = {2016}
+}
+
+@article{ RLWE,
+  author          = {Vadim Lyubashevsky and Chris Peikert and Oded Regev},
+  journal         = {Journal of the ACM},
+  title           = {On Ideal Lattices and Learning with Errors over Rings},
+  year            = {2010}
+}
+
+@article{ Hardware,
+  author          = {Sangpyo Kim and Wonkyung Jung and Jaiyoung Park and Jung Ho Ahn},
+  journal         = {2020 IEEE International Symposium on Workload Characterization},
+  title           = {Accelerating Number Theoretic Transformations for Bootstrappable Homomorphic Encryption on GPUs},
+  year            = {2020}
+}
+
+@misc{ HEStandard,
+  howpublished = {https://homomorphicencryption.org/standard/},
+  year         = {Retreived March 2022}
+}
+
+@article{ NTT,
+  author          = {M. Bhattacharya and R. Creutzburg and J. Astola},
+  journal         = {International TICSP Workshop on Spectral Methods and Multirate Signal Processing},
+  title           = {Some historical notes on Number Theoretic transform},
+  year            = {2004}
+}
+
+@book{ Shapiro,
+  author         = {Linda G. Shapiro and George C. Stockman},
+  publisher      = {Pearson},
+  title          = {Computer Vision},
+  year           = {2001}
+}
+
+@article{ Semantic,
+  author          = {Dazhou Guo and Yanting Pei and Kang Zheng and Hongkai Yu and Yuhang Lu and Song Wang},
+  journal         = {IEEE Transactions on Geoscience and Remote Sensing},
+  title           = {Degraded Image Semantic Segmentation With Dense-Gram Networks},
+  year            = {2021}
+}
+
+@article{ Instance,
+  author          = {Jingru Yi and Pengxiang Wu and Menglin Jiang and Qiaoying Huang and Daniel J. Hoeppner and Dimitris N. Metaxas},
+  journal         = {Medical Image Analysis},
+  title           = {Attentive neural cell instance segmentation},
+  year            = {2019}
+}
+
+@article{ Wren,
+  author          = {C.R. Wren and A. Azarbayejani and T. Darrell and A.P. Pentland},
+  journal         = {IEEE Transactions on Pattern Analysis and Machine Intelligence},
+  title           = {Pfinder: real-time tracking of the human body},
+  year            = {1997}
+}
+
+@article{ Stauffer,
+  author          = {Chris Stauffer and W. E. L. Grimson},
+  journal         = {1999 IEEE computer society conference on computer vision and pattern recognition},
+  title           = {Adaptive background mixture models for real-time tracking},
+  year            = {1999}
+}
+
+@article{ Waterfall,
+  author          = {W. W. Royce},
+  journal         = {Proceedings of the 9th International Conference on Software Engineering},
+  title           = {Managing the development of large software systems: concepts and techniques},
+  year            = {1987}
+}
+
+@misc{ BrilliantHE,
+  author       = {Brilliant.org},
+  howpublished = {https://brilliant.org/wiki/homomorphic-encryption/},
+  title        = {Homomorphic Encryption},
+  year         = {Retrieved March 2022}
+}
+
+@article{ Kulchandani,
+  author          = {Jaya S. Kulchandani and Kruti J. Dangarwala},
+  journal         = {2015 International Conference on Pervasive Computing (ICPC)},
+  title           = {Moving object detection: Review of recent research trends},
+  year            = {2015}
+}
+
+@misc{ Python,
+  author       = {Python Software Foundation},
+  howpublished = {https://www.python.org/},
+  title        = {Python},
+  year         = {Retrieved March 2022}
+}
+
+@misc{ VSCode,
+  author       = {Microsoft},
+  howpublished = {https://code.visualstudio.com/},
+  title        = {Visual Studio Code},
+  year         = {Retrieved March 2022}
+}
+
+@misc{ Git,
+  author       = {Git},
+  howpublished = {https://git-scm.com/},
+  title        = {Git},
+  year         = {Retrieved March 2022}
+}
+
+@misc{ Github,
+  author       = {Github Inc.},
+  howpublished = {https://github.com/},
+  title        = {Github},
+  year         = {Retrieved March 2022}
+}
+
+@misc{ OneDrive,
+  author       = {Microsoft},
+  howpublished = {https://www.microsoft.com/en-gb/microsoft-365/onedrive/online-cloud-storage},
+  title        = {OneDrive Personal Cloud Storage},
+  year         = {Retrieved March 2022}
+}
+
+@article{ BFV1,
+  author          = {Zvika Brakerski},
+  journal         = {Annual Cryptology Conference},
+  title           = {Fully Homomorphic Encryption without Modulus Switching from Classical GapSVP},
+  year            = {2012}
+}
+
+@article{ BFV2,
+  author          = {Junfeng Fan and Frederik Vercauteren},
+  journal         = {Cryptology ePrint Archive},
+  title           = {Somewhat Practical Fully Homomorphic Encryption},
+  year            = {2012}
+}
+
+@misc{ Wrapper,
+  author       = {Huelse},
+  howpublished = {https://github.com/Huelse/SEAL-Python},
+  title        = {SEAL-Python},
+  year         = {Retrieved March 2022}
+}
+
+@misc{ MovingMNIST,
+  howpublished = {http://www.cs.toronto.edu/~nitish/unsupervised\_video/},
+  title        = {Unsupervised Learning of Video Representations using LSTMs},
+  year         = {Retrieved March 2022}
+}
+
+@misc{ MNIST,
+  author       = {Yann LeCun and Corinna Cortes and Christopher J.C. Burges},
+  howpublished = {http://yann.lecun.com/exdb/mnist/},
+  title        = {The MNIST Database of Handwritten Digits},
+  year         = {Retrieved March 2022}
+}
+
+@misc{ LASIESTA,
+  author       = {Grupo de Tratamiento de Im\'agenes},
+  howpublished = {https://www.gti.ssr.upm.es/data/lasiesta\_database},
+  title        = {Labeled and Annotated Sequences for Integral Evaluation of SegmenTation Algorithms},
+  year         = {Retrieved March 2022}
+}
+
+@misc{ BSD,
+  author       = {Open Source Initiative},
+  howpublished = {https://opensource.org/licenses/BSD-3-Clause},
+  title        = {The 3-Clause BSD License},
+  year         = {Retrieved March 2022}
+}
+
+@misc{ MIT,
+  author       = {Open Source Initiative},
+  howpublished = {https://opensource.org/licenses/MIT},
+  title        = {The MIT License},
+  year         = {Retrieved March 2022}
+}
+
+@misc{ PSFL,
+  author       = {Python Software Foundation},
+  howpublished = {https://docs.python.org/3/license.html\#psf-license},
+  title        = {PSF LICENSE AGREEMENT FOR PYTHON 3.10.4},
+  year         = {Retrieved March 2022}
 }
