--- a/Implementation.tex
+++ b/Implementation.tex
@@ -3,6 +3,13 @@
 
 What you actually did
 
+\begin{figure}[ht]
+    \centering
+    \input{classes}
+    \caption{UML Class Diagram showing the components of the software.}
+    \label{fig:classDiagram}
+\end{figure}
+
 \section{Implementation}
 
 
