--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -7,14 +7,14 @@ BibTeX export options can be customized via Options -> BibTeX in Mendeley Deskto
   author       = {Ring},
   howpublished = {https://en-uk.ring.com/},
   title        = {Ring Homepage},
-  year         = {est. 2012}
+  year         = {Retrieved March 2022}
 }
 
 @misc{ EUFY,
   author       = {Eufy},
   howpublished = {https://uk.eufylife.com/},
   title        = {Eufy Homepage},
-  year         = {est. 2016}
+  year         = {Retrieved March 2022}
 }
 
 @article{ SEAL,
@@ -278,4 +278,151 @@ BibTeX export options can be customized via Options -> BibTeX in Mendeley Deskto
   howpublished = {https://docs.python.org/3/license.html\#psf-license},
   title        = {PSF LICENSE AGREEMENT FOR PYTHON 3.10.4},
   year         = {Retrieved March 2022}
+}
+
+@article{ RNS,
+  author          = {Jung Hee Cheon and Kyoohyung Han and Andrey Kim and Miran Kim and Yongsoo Song},
+  journal         = {International Conference on Selected Areas in Cryptography},
+  title           = {A Full RNS Variant of Approximate Homomorphic Encryption},
+  year            = {2019}
+}
+
+@article{ RAE,
+  author          = {Andrey Kim and Antonis Papadimitriou and Yuriy Polyakov},
+  journal         = {Topics in Cryptology - CT-RSA},
+  title           = {Approximate Homomorphic Encryption with Reduced Approximation Error},
+  year            = {2020}
+}
+
+@article{ RotationBad,
+  author          = {Chiraag Juvekar and inod Vaikuntanathan and Anantha Chandrakasan},
+  journal         = {Proceedings of the 27th USENIX Conference on Security Symposium},
+  title           = {Gazelle: A Low Latency Framework for Secure Neural Network Inference},
+  year            = {2018}
+}
+
+@article{ Paterson,
+  author          = {Mike Paterson and Larry J. Stockmeyer},
+  journal         = {SIAM Journal on Computing},
+  title           = {On the Number of Nonscalar Multiplications Necessary to Evaluate Polynomials},
+  year            = {1973}
+}
+
+@article{ Badawi,
+  author          = {Ahmad Al Badawi and Jin Chao and Jie Lin and Chan Fook Mun and Jun Jie Sim and Benjamin Hong Meng Tan and Xiao Nan and Khin Mi Mi Aung and Vijay Ramaseshan Chandrasekhar},
+  journal         = {IEEE Transactions on Emerging Topics in Computing},
+  title           = {Towards the AlexNet Moment for Homomorphic Encryption: HCNN, theFirst Homomorphic CNN on Encrypted Data with GPUs},
+  year            = {2020}
+}
+
+@article{ Makkaoui,
+  author          = {Khalid El Makkaoui and Abdellah Ezzati and Abderrahim Beni Hssane},
+  journal         = {International Conference on Cloud Technologies and Applications },
+  title           = {Challenges of Using Homomorphic Encryption to Secure Cloud Computing},
+  year            = {2015}
+}
+
+@article{ SeamCarving,
+  author          = {Shai Avidan and Ariel Shamir},
+  journal         = {ACM Transactions on Graphics},
+  title           = {Seam Carving for Content-Aware Image Resizing},
+  year            = {2007}
+}
+
+@article{ Saliency,
+  author          = {Karen Simonyan and Andrea Vedaldi and Andrew Zisserman},
+  journal         = {arXiv:1312.6034},
+  title           = {Deep Inside Convolutional Networks: Visualising Image Classification Models and Saliency Maps},
+  year            = {2014}
+}
+
+@article{ Viola,
+  author          = {Paul Viola andMichael Jeffrey Jones},
+  journal         = {Conference on Computer Vision and Pattern Recognition,},
+  title           = {Rapid Object Detection using a Boosted Cascade of Simple Features},
+  year            = {2001}
+}
+
+@article{ Itti,
+  author          = {Laurent Itti Christof Koch and Ernst Niebur},
+  journal         = {IEEE Transactions on Pattern Analysis and Machine Intelligence},
+  title           = {A Model of Saliency-based Visual Attention for Rapid Scene Analysis},
+  year            = {1998}
+}
+
+@article{ Rubinstein,
+  author          = {Michael Rubinstein and Ariel Shamir and Shai Avidan},
+  journal         = {The ACM SIGGRAPH conference proceedings},
+  title           = {Improved Seam Carving for Video Retargeting},
+  year            = {2008}
+}
+
+@article{ Duarte,
+  author          = {Ronald Duarte and Resit Sendag},
+  journal         = {Proceedings of the 18th Annual International Conference on Parallel and Distributed Processing Techniques and Application},
+  title           = {Accelerating and Characterizing Seam Carving Using a Heterogeneous CPU-GPU System},
+  year            = {2012}
+}
+
+@misc{ wikiSeamCarving,
+  author       = {Wikipedia user Newton2},
+  howpublished = {https://en.wikipedia.org/wiki/Seam\_carving},
+  title        = {Seam Carving},
+  year         = {Retreived March 2020}
+}
+
+@phdthesis{ Foveal,
+  author      = {Leo John Grady},
+  school      = {Boston University},
+  title       = {Space-variant computer vision: A graph-theoretic approach},
+  year        = {2004}
+}
+
+@article{ Watershed,
+  author          = {Serge Beucher and Christian Lantuéjoul},
+  journal         = {International workshop on image processing, real-time edge and motion detection},
+  title           = {Use of Watersheds in Contour Detection},
+  year            = {1979}
+}
+
+@article{ KMeans,
+  author          = {J. MacQueen},
+  journal         = {Proceedings of the Fifth Berkeley Symposium on Mathematical Statistics and Probability},
+  title           = {Some methods for classification and analysis of multivariate observations},
+  year            = {1967}
+}
+
+@article{ Moore,
+  author          = {R.R. Schaller},
+  journal         = {IEEE Spectrum},
+  title           = {Moore's law: past, present and future},
+  year            = {1997}
+}
+
+@article{ Dennard,
+  author          = {Greg Yeric},
+  journal         = {International Electron Devices Meeting},
+  title           = {Moore's law at 50: Are we planning for retirement?},
+  year            = {2015}
+}
+
+@misc{ ParallelismVsConcurrency,
+  author       = {Rob Pike},
+  howpublished = {Waza Conference (Slides:\\https://talks.golang.org/2012/waza.slide\#1)},
+  title        = {Concurrency is not Parallelism},
+  year         = {2012}
+}
+
+@article{ Dempster,
+  author          = {A. P. Dempster and N. M. Laird and D. B. Rubin},
+  journal         = {Journal of the Royal Statistical Society},
+  title           = {Maximum Likelihood from Incomplete Data Via the EM Algorithm},
+  year            = {1977}
+}
+
+@article{ HillClimbing,
+  author          = {Sheldon H. Jacobson and Enver Yücesan},
+  journal         = {Journal of Heuristics},
+  title           = {Analyzing the Performance of Generalized Hill Climbing Algorithms},
+  year            = {2004}
 }
